--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,6 +43,7 @@
 
             #documentpanel {
                 flex: 0;
+                max-width: 25%;
                 display: flex;
                 flex-direction: column;
                 border: 1px solid black;
@@ -62,8 +63,7 @@
             }
 
             #archiveupload {
-                flex: 0;
-                display: block;
+                /*flex: 0;*/
                 margin: 0.5em;
             }
 
@@ -75,10 +75,14 @@
 
             #documentinfo {
                 flex: 1;
+                overflow: scroll;
+                margin: 0.5em;
+                padding: 0.5em;
+                background: white;
             }
 
             #downloadfile {
-                flex: 0;
+                /*flex: 0;*/
                 margin: 0.5em;
                 padding: 0.5em;
             }
