--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,8 @@
 
             #documentpanel {
                 flex: 0;
-                max-width: 25%;
+                min-width: 20%;
+                max-width: 20%;
                 display: flex;
                 flex-direction: column;
                 border: 1px solid black;
@@ -65,12 +66,16 @@
             #archiveupload {
                 /*flex: 0;*/
                 margin: 0.5em;
+                /*background: white;*/
+                /*border: 1px dotted grey;*/
             }
 
             #archiveselection {
                 flex: 1;
                 display: block;
                 margin: 0.5em;
+                background: white;
+                border: 1px solid grey;
             }
 
             #documentinfo {
@@ -79,6 +84,7 @@
                 margin: 0.5em;
                 padding: 0.5em;
                 background: white;
+                border: 1px solid grey;
             }
 
             #downloadfile {
