--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,32 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>HAMILTON | XSL Document Extractor</title>
+        <title>HAMILTON | XSL Archive Document Explorer</title>
 
+        <script src="https://unpkg.com/jszip@3.2.2/dist/jszip.min.js"></script>
+        <script src="https://unpkg.com/react@16.12.0/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.production.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/monaco-editor@0.20.0/min/vs/editor/editor.main.css">
         <!--
-        <script src="https://unpkg.com/jszip@latest/dist/jszip.min.js"></script>
-        <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
-        <script src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js"></script>
-        -->
         <script src="./js/jszip.min.js"></script>
         <script src="./js/react.production.min.js"></script>
         <script src="./js/react-dom.production.min.js"></script>
-        <script src="./js/material-ui.production.min.js"></script>
+        <script src="./js/highlight.min.js"></script>
+        <link rel="stylesheet" href="./css/default.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/monaco-editor@0.20.0/min/vs/editor/editor.main.css">
+        -->
 
         <script type="module">
             import App from './mjs/App.mjs';
-            // Mount react application when DOM is ready
             window.addEventListener('DOMContentLoaded', event => {
-                ReactDOM.render(
-                    React.createElement(App, null, null),
-                    document.querySelector('body')
-                );
+                ReactDOM.render(React.createElement(App, null, null), document.getElementById('hook'));
             });
         </script>
 
         <style>
-            html, body {
+            html, body, #hook {
                 width: 100%;
                 height: 100%;
                 padding: 0;
@@ -53,6 +53,8 @@
 
             #codeviewer {
                 flex: 1;
+                margin: 0;
+                padding: 0.5em;
                 border: none;
                 overflow: hidden;
             }
@@ -82,9 +84,11 @@
                 flex: 1;
                 overflow: scroll;
                 margin: 0.5em;
-                padding: 0.5em;
-                background: white;
                 border: 1px solid grey;
+            }
+
+            #documentinfo code {
+                overflow: visible;
             }
 
             #downloadfile {
@@ -94,5 +98,19 @@
             }
         </style>
     </head>
-    <body></body>
+    <body>
+        <script>
+            hljs.initHighlightingOnLoad();
+            //hljs.highlightBlock(document.getElementById('documentinfo'));
+            var require = {
+                paths: { 
+                    vs: 'https://unpkg.com/monaco-editor@0.20.0/min/vs'
+                }
+            };
+        </script>
+        <script src="https://unpkg.com/monaco-editor@0.20.0/min/vs/loader.js"></script>
+        <script src="https://unpkg.com/monaco-editor@0.20.0/min/vs/editor/editor.main.nls.js"></script>
+        <script src="https://unpkg.com/monaco-editor@0.20.0/min/vs/editor/editor.main.js"></script>
+        <div id="hook"></div>
+    </body>
 </html>
